Add todo list with doom emacs

--- a/Polybar/.config/polybar/config.ini
+++ b/Polybar/.config/polybar/config.ini
@@ -38,7 +38,7 @@ bottom = false
 
 ; Prefer fixed center position for the `modules-center` block
 ; When false, the center position will be based on the size of the other blocks.
-fixed-center = false
+fixed-center = true
 
 ; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -111,8 +111,9 @@ module-margin-right = 0
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Hack:style:bold:size=10;2"
-font-1 = "fontawesome:size=10;2"
+; font-0 = "UbuntuMono Nerd Font:style=Bold:size=10;2"
+ font-1 = "fontawesome:size=10;2"
+  font-0 = "FreeSans:style:bold:size=10;2"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
