reddit agenda auto sync

--- a/Polybar/.config/polybar/config.ini
+++ b/Polybar/.config/polybar/config.ini
@@ -139,8 +139,8 @@ module-margin-right = 0
 ;volume brightness battery_bar 
 
 modules-left = ewmh title
-modules-center = 
-modules-right = cmus colors sep memory cpu alsa network battery date
+modules-center = cmus
+modules-right = colors sep memory cpu alsa network battery date
 
 ; The separator will be inserted between the output of each module
 separator =
