--- a/Polybar/.config/polybar/config.ini
+++ b/Polybar/.config/polybar/config.ini
@@ -139,7 +139,7 @@ module-margin-right = 0
 ;volume brightness battery_bar 
 
 modules-left = ewmh title
-modules-center = cmus
+modules-center = spotify
 modules-right = colors sep memory cpu alsa network battery date
 
 ; The separator will be inserted between the output of each module
@@ -317,6 +317,15 @@ shade6 = #96ffcc
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+[module/spotify]
+type = custom/script
+tail = true
+; prefix symbol is shown before the text
+;format-prefix = "<prefix-symbol>"
+format = <label>
+exec = ~/.config/polybar/scripts/scroll_spotify_status.sh
+click-left = playerctl next -p spotify
+click-right = playerctl play-pause -p spotify
 [module/cmus]
 type = custom/script
 
