--- a/Flameshot/.config/flameshot/flameshot.ini
+++ b/Flameshot/.config/flameshot/flameshot.ini
@@ -14,6 +14,7 @@ TYPE_CIRCLE=C
 TYPE_CIRCLECOUNT=
 TYPE_COMMIT_CURRENT_TOOL=Ctrl+Return
 TYPE_COPY=Ctrl+C
+TYPE_DELETE_CURRENT_TOOL=Del
 TYPE_DRAWER=D
 TYPE_EXIT=Ctrl+Q
 TYPE_IMAGEUPLOADER=Return
