--- a/Polybar/.config/polybar/config.ini
+++ b/Polybar/.config/polybar/config.ini
@@ -600,7 +600,7 @@ content-background = #cc282a36
 content-foreground = #aaffffff
 content-padding = 2
 
-click-left = urxvt -e $HOME/.config/polybar/scripts/update.sh 
+click-left = $HOME/.config/polybar/scripts/update.sh
 click-right = $HOME/.config/polybar/scripts/color-switch.sh
 
 [module/kernel]
